# rust-deluge-rpc

./: Cargo.toml
src/: encoding.rs  error.rs  event.rs  lib.rs  main.rs  methods.rs  receiver.rs  rencode.rs  rpc.rs  session.rs  types.rs  wtf.rs
src/encoding/: mod.rs  rencode.rs
src/methods/: core.rs  daemon.rs  label.rs  mod.rs
src/types/: event.rs  inbound.rs  macros.rs  message.rs  mod.rs  rpc.rs  rpc_error.rs
src/types/rpc_error/: add_torrent.rs  mod.rs
