[package]
name = "deluge-rpc"
version = "0.7.0"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Client bindings for the Deluge RPC API."
repository = "https://github.com/The0x539/rust-deluge-rpc"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
ron = "0.6.0"
tokio = { version = "0.2", features = ["tcp", "rt-threaded", "io-util", "sync", "macros", "parking_lot", "blocking"] }
tokio-rustls = "0.13.0"
rustls = { version = "0.17.0", features = ["dangerous_configuration"] }
cloudflare-zlib = "0.2.5"
deluge-rpc-macro = "0.6.2"
hex = { version = "0.4.2", features = ["serde"] }
rencode = "0.2.1"
lazy-regex = "0.1.3"
regex = "1.3.7"
lazy_static = "1.4.0"
enum-kinds = "0.5.0"
num_enum = "0.5.0"
fnv = "1.0.7"
futures = "0.3.5"
