[package]
name = "deluge-rpc"
version = "0.8.0"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Client bindings for the Deluge RPC API."
repository = "https://github.com/The0x539/rust-deluge-rpc"

[features]
default = ["trust-infohashes"]
trust-infohashes = ["hashers"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde-value = "0.7.0"
tokio = { version = "1.19.2", features = ["net", "rt-multi-thread", "io-util", "sync", "macros", "parking_lot"] }
tokio-rustls = "0.23.4"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
cloudflare-zlib = "0.2.5"
deluge-rpc-macro = "0.6.2"
hex = { version = "0.4.2", features = ["serde"] }
rencode = "0.2.1"
regex = "1.3.7"
enum-kinds = "0.5.0"
num_enum = "0.5.0"
fnv = "1.0.7"
futures = "0.3.5"
hashers = { version = "1.0.1", optional = true}
thiserror = "1.0"
once_cell = "1.8.0"
